--- a/MeetMe Personal_files/style2.css
+++ b/MeetMe Personal_files/style2.css
@@ -2685,7 +2685,7 @@ h6 {
     border-color: #fff;
     background: #fff; }
     .feature_item:hover i:before {
-      background: linear-gradient(to right, #8490ff 0%, #62bdfc 70%);
+      background: linear-gradient(336deg, #e0c3fc, #62bdfc);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent; }
 
@@ -3117,4 +3117,16 @@ h6 {
 }
 .cornell{
   margin-bottom: 20px !important;
+}
+
+.feature_item:hover{
+  cursor: pointer;
+}
+
+.feature_item{
+  height: 350px;
+}
+.feature_item p{
+  text-decoration: none;
+  color: #777777;
 }
