--- a/MeetMe Personal_files/style2.css
+++ b/MeetMe Personal_files/style2.css
@@ -3130,3 +3130,72 @@ h6 {
   text-decoration: none;
   color: #777777;
 }
+
+#myTabContent2, #skills{
+ display: block;
+ margin: auto;
+ text-align: center;
+
+}
+.flexcontainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.skillul li{
+  text-decoration: none;
+  list-style: none;
+  display: inline-block;
+  text-align: center;
+  height: 2.4em;
+  line-height: 2.6em;
+  border-radius: 2.4em;
+  background-color: white;
+  margin: 0 .75em 1.5em;
+    margin-top: 0px;
+    margin-right: 0.75em;
+    margin-bottom: 1.5em;
+    margin-left: 0.75em;
+    text-transform: uppercase;
+    padding: 0 17px;
+    font-weight: 400;
+    font-size: .575em;
+    color: black;
+    box-shadow: 0px 1px 10px white;
+}
+
+.skillul{
+  width: 65%;
+  padding-inline-start: 0%;
+  display: block;
+  margin: auto;
+
+}
+
+#skills-tab, #course-tab{
+  width: 150px;
+}
+
+#skills h4{
+  color: white;
+  margin-top: 10px;
+  font-size: 25px;
+  font-family: "Heebo", sans-serif;
+  font-weight: bold;
+  margin-bottom: 8px;
+  border-top: solid 1px rgba(255, 255, 255, 0.65);
+  width: 70%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 20px;
+}
+
+#myTabs{
+  margin-bottom: 0px;
+}
+
+#firstskill{
+  border: none !important;
+  margin-top: 40px !important;
+}
