--- a/MeetMe Personal_files/style2.css
+++ b/MeetMe Personal_files/style2.css
@@ -3177,9 +3177,9 @@ h6 {
 }
 
 #skills h4{
-  color: white;
+  color: rgba(255, 255, 255, 0.795);
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 22px;
   font-family: "Heebo", sans-serif;
   font-weight: bold;
   margin-bottom: 8px;
@@ -3189,6 +3189,7 @@ h6 {
   margin-right: auto;
   margin-left: auto;
   padding-top: 20px;
+  text-transform: uppercase;
 }
 
 #myTabs{
