--- a/MeetMe Personal_files/style2.css
+++ b/MeetMe Personal_files/style2.css
@@ -3163,6 +3163,31 @@ h6 {
     color: black;
     box-shadow: 0px 1px 10px white;
 }
+.courseul{
+  padding-inline-start: 0%;
+}
+.courseul li{
+  text-decoration: none;
+  list-style: none;
+  display: block;
+  text-align: center;
+  height: 2.4em;
+  line-height: 2.6em;
+  border-radius: 2.4em;
+  background-color: white;
+  margin: 0 .75em 1.5em;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 1.75em;
+    margin-left: auto;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: .575em;
+    color: black;
+    box-shadow: 0px 1px 10px white;
+    width: 400px;
+}
+
 
 .skillul{
   width: 65%;
@@ -3172,12 +3197,12 @@ h6 {
 
 }
 
-#skills-tab, #course-tab{
+#skills-tab, #course-tab, #home-tab, #profile-tab{
   width: 150px;
 }
 
 #skills h4{
-  color: rgba(255, 255, 255, 0.795);
+  color: rgba(255, 255, 255, 0.85);
   margin-top: 10px;
   font-size: 22px;
   font-family: "Heebo", sans-serif;
@@ -3192,11 +3217,57 @@ h6 {
   text-transform: uppercase;
 }
 
+#course h4{
+  color: rgba(255, 255, 255, 0.85);
+  margin-top: 40px;
+  font-size: 22px;
+  font-family: "Heebo", sans-serif;
+  font-weight: bold;
+  margin-bottom: 11px;
+  display: inline-block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 20px;
+  text-transform: uppercase;
+}
 #myTabs{
   margin-bottom: 0px;
 }
 
-#firstskill{
+.firstskill{
   border: none !important;
   margin-top: 40px !important;
+}
+
+.tab-pane:not(.active) {
+  display: none !important;
+}
+
+.hflexbox{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.hflexbox div{
+  width: 500px !important;
+}
+
+.here{
+  color: white;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.honortitle{
+  margin-bottom: 10px !important;
+}
+.honorloc{
+  margin-bottom: 20px !important;
+}
+#honor1, #honor2, #honor3{
+  cursor: default;
+}
+#honor1:hover, #honor2:hover, #honor3:hover{
+  box-shadow: none;
 }
