--- a/MeetMe Personal_files/style2.css
+++ b/MeetMe Personal_files/style2.css
@@ -3328,3 +3328,81 @@ h6 {
 .fa-envelope{
   font-size: 1.75em !important;
 }
+
+
+
+@media (max-width:575px){
+
+#me{
+  width: 80%;
+  height: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.name, .personal_text p{
+  text-align: center;
+}
+
+.basic_info{
+  width: 170px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tools_expert{
+  margin-top: 0px;
+  padding-top: 20px;
+}
+
+.joke1{
+  font-size: smaller !important;
+}
+
+.feature_item i, .feature_item h4, .honorloc{
+  text-align: center;
+}
+
+.skillul{
+  width: 100%;
+}
+#skills h4{
+  width: 90%;
+}
+.hflexbox{
+  display: block;
+}
+.hflexbox div, .courseul, .courseul li{
+  width: 100% !important;;
+}
+
+.secondbox h4{
+  border-top: solid 1px rgba(255, 255, 255, 0.65);
+  margin-top: 20px !important;
+}
+
+aside{
+  display: block !important;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100% !important;
+}
+
+.footerpc{
+  width: 90%;
+  display: block !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+aside h3, .welcome_text h4{
+  text-align: center;
+}
+
+#home .list, #profile .list{
+  margin-left: 0px !important;
+
+}
+}
